app/assets/stylesheets/spree/frontend/spree_product_hover_zoom.css
/*
Placeholder manifest file.
the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/frontend/all.css'
*/

/*
 *= require drift-basic
*/

/*
 #product-images #main-image img.click-to-zoom { min-height: 0px; height: 12px; }
*/
.product-hover-zoom {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 400px;
}

.drift-link {
  float: left;
  cursor: zoom-in;
  width: 100%;
}

#main-image{
	min-height: 272px;
/*	/ Internet Explorer 10 /*/
	display:-ms-flexbox;
	-ms-flex-pack:center;
	-ms-flex-align:center;

	/*/ Firefox /*/
	display:-moz-box;
	-moz-box-pack:center;
	-moz-box-align:center;

	/*/ Safari, Opera, and Chrome /*/
	display:-webkit-box;
	-webkit-box-pack:center;
	-webkit-box-align:center;

	/*/ W3C /*/
	display:box;
	box-pack:center;
	box-align:center;
}

